style(button): correct z-index and style of buttons

--- a/user-frontend/src/components/reusables/_button.sass
+++ b/user-frontend/src/components/reusables/_button.sass
@@ -1,4 +1,4 @@
-button:not(.button--icon)
+button
     border: none
     outline: none
     border-radius: 3px
@@ -32,6 +32,7 @@ button:not(.button--icon)
     justify-content: center
     align-items: center
     width: 56px
+    min-width: initial
     height: 56px
     border-radius: 100%
     color: var(--color-white)
